--- a/UI/style.css
+++ b/UI/style.css
@@ -88,6 +88,31 @@ body{
 	font-size: 14px;
 }
 
+input[type=submit] {
+	/*font-family: "Roboto", "sans-serif";
+	text-transform: uppercase;
+	outline: 0;
+	background: #4CAF50;
+	width: 15%;
+	border: 0;
+	padding: 15px;
+	color: #FFFFFF;
+	font-size: 14px;
+	cursor: pointer;*/
+    padding:5px 15px; 
+	background: #4CAF50;
+    border:0 none;
+    cursor:pointer;
+    -webkit-border-radius: 5px;
+    border-radius: 5px; 
+}
+
+
+
+
+
+
+
 /*
 table {
     border-collapse: collapse;
